Ready for user testing
Added several gui features
Fixed login
Fixed session variables
Users can change their password
If user exits application, and then click on login, if the Session
variable is still alive, it will take them right to the user page

--- a/wellness_challenge.html
+++ b/wellness_challenge.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Alex Persinger">
 
-    <title>Home</title>
+    <title>Challenges</title>
 
     <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
@@ -40,8 +40,8 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="wellness_challenge">Challenges</a></li>
+              <li><a href="wellness_index">Home</a></li>
+              <li class="active"><a href="#">Challenges</a></li>
               <li><a href="wellness_login">Login</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Extras <b class="caret"></b></a>
@@ -49,6 +49,10 @@
                   <li><a href="#">Nutrition 101</a></li>
                   <li><a href="#">Healthy Dieting</a></li>
                   <li><a href="#">Where to Start</a></li>
+                  <li class="divider"></li>
+                  <li class="dropdown-header">Misc</li>
+                  <li><a href="#">Stuff</a></li>
+                  <li><a href="#">More stuff</a></li>
                 </ul>
               </li>
             </ul>
@@ -58,7 +62,7 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Some headline here</h1>
+        <h1>Cardio Challenge</h1>
         <p></p>
         <p>
         </p>
